--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+@keyframes popUp {
+  0% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
