--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+html,body{
+  scroll-behavior: smooth;
+}
 @keyframes popUp {
   0% {
     transform: scale(0.8);
