--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,3 +40,34 @@ html,body{
   50%{transform: translateX(0);}
   100%{transform: translateX(84px);}
 }
+.spin{
+  animation: spinFast 6s ease-in-out 5s infinite ;
+}
+.entry{
+  animation: entryAi 1s ease-in 5s forwards;
+}
+@keyframes entryAi {
+  0%{
+    opacity: 0;
+    transform: scale(0);
+  }
+  50%{
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100%{
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+@keyframes spinFast {
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  5% {
+    transform: rotate(360deg) scale(1.1);
+  }
+  100% {
+    transform: rotate(360deg) scale(1);
+  }
+}
